--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reqz",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "description": "Automate chains of requests to help test and develop rest apps",
   "main": "lib/client.js",
   "bin": {
@@ -30,7 +30,7 @@
   "homepage": "https://github.com/bstefanescu/reqz#readme",
   "dependencies": {
     "chalk": "^4.1.2",
-    "fast-glob": "^3.2.7",
+    "csv-parse": "^4.16.3",
     "superagent": "^6.1.0",
     "yargs": "^17.2.1"
   }
